add start design cart

--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -147,7 +147,7 @@
                                     </div>
                                 </div>
                                 <div class="uk-flex uk-flex-top uk-flex-between uk-flex-middle uk-margin">
-                                    <p class="uk-margin-remove">Количество: </p>
+                                    <p class="uk-margin-remove">Размер(ы): </p>
                                     <div class="uk-grid-small uk-text-left uk-width-expand uk-margin-small-left" uk-grid>
                                         {% for size in product.sizes %}
                                         <label class="uk-flex uk-flex-middle">
