--- a/bizopt/BO/templates/confirmOrder.html
+++ b/bizopt/BO/templates/confirmOrder.html
@@ -17,47 +17,61 @@
 </head>
 <body>
     
-    <nav class="uk-navbar-container" uk-navbar>
+        <nav class="uk-navbar-container" style="margin-bottom: 0; height: 10vh; width: 100%; background-color: white; border-bottom: 2px solid #ccc;" uk-navbar>
+            <div class="uk-navbar-left uk-margin-left">
+                
+                <ul class="uk-navbar-nav">
+                    <li>
+                        <a href="/" class="uk-width-expand uk-padding-remove uk-flex uk-flex-middle">
+                            <img src="../../../media/logoImage/logo.svg" alt="" width="40">
+                            <img src="../../../media/logoImage/logo_text.svg" alt=""
+                                class="uk-width-small uk-margin-small-left">
+                        </a>
+                    </li>
+                </ul>
 
-        <div class="uk-navbar-left">
+            </div>
+            <div class="uk-navbar-right uk-margin-right">
 
-            <ul class="uk-navbar-nav">
-                <li class="uk-active"><a href="#">Active</a></li>
-                <li>
-                    <a href="#">Parent</a>
-                    <div class="uk-navbar-dropdown">
-                        <ul class="uk-nav uk-navbar-dropdown-nav">
-                            <li class="uk-active"><a href="#">Active</a></li>
-                            <li><a href="#">Item</a></li>
-                            <li><a href="#">Item</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="#">Item</a></li>
-            </ul>
+                <ul class="uk-navbar-nav">
+                    <li>
+                    
+                    <ul class="uk-navbar-nav uk-width-auto">
+                        
+                       <li class="uk-active">
+                        <a uk-icon="icon: user"></a>
+                        <div class="uk-navbar-dropdown">
+                            <ul class="uk-nav uk-navbar-dropdown-nav">
+                                {% if user.is_partner %}
+                                <li>
 
-        </div>
+                                    <a href="/partners/" class="uk-button uk-button-link"
+                                        style="text-transform: none;">Вы
+                                        уже
+                                        партнер</a>
+                                </li>
+                                {% else %}
+                                <li class="uk-active">
+                                    <a href="/partners/" class="uk-button uk-button-link uk-text-normal"
+                                        style="text-transform: none;">Стать партнером</a>
+                                </li>
+                                {% endif %}
+                                <li class="uk-nav-divider"></li>
+                                <li class="uk-active"><a href="/edit/">Настройки профиля</a></li>
+                                <!-- <li class="uk-active"><a href="/chats">Чаты</a></li> -->
+                                <li class="uk-active"><a href="/logout/">Выйти</a></li>
+                                {% if user.is_admin and user.is_superuser and user.is_staff and user.is_active %}
+                                <li class="uk-active"><a href="/admin/">Админка</a></li>
+                                {% endif %}
+                            </ul>
+                        </div>
+                    </li>
+                    </ul>
 
-        <div class="uk-navbar-right">
-
-            <ul class="uk-navbar-nav">
-                <li class="uk-active"><a href="#">Active</a></li>
-                <li>
-                    <a href="#">Parent</a>
-                    <div class="uk-navbar-dropdown">
-                        <ul class="uk-nav uk-navbar-dropdown-nav">
-                            <li class="uk-active"><a href="#">Active</a></li>
-                            <li><a href="#">Item</a></li>
-                            <li><a href="#">Item</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="#">Item</a></li>
-            </ul>
-
-        </div>
-
-    </nav>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
 
   <div style="width: 80%; margin-left: 10%">
