change color btn

--- a/bizopt/BO/templates/cart.html
+++ b/bizopt/BO/templates/cart.html
@@ -146,7 +146,7 @@
                             <div class="uk-flex uk-border-rounded uk-margin-left uk-margin-top">
                                 <input class="uk-input uk-width-3-4 uk-margin-remove " placeholder="Промокод"
                                     type="text" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
-                                <button class="uk-button uk-button-secondary uk-margin-right" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"> Применить</button>
+                                <button class="uk-button uk-button-secondary uk-margin-right" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%; background-color: #b54e00e1;"> Применить</button>
                             </div>
 
                         </div>
