1 of 3 parts confirm page done

--- a/bizopt/BO/templates/cart.html
+++ b/bizopt/BO/templates/cart.html
@@ -24,9 +24,9 @@
                         <div class="uk-flex-column">
                             {% for shop in shops %}
                             <div class="uk-width-1"
-                                style=" margin: 10px 0">
+                                style=" margin: 0">
                                 <p class="uk-margin-left" style=" font-size: 1.5em; margin:0">Заказ <b
-                                        class="uk-text-uppercase">{{shop}}</b>
+                                        class="">{{shop}}</b>
                                 </p>
                                 <hr style="border: 2px solid #B54F00;">
                             </div>
@@ -71,7 +71,7 @@
 
                                             <div class="uk-flex">
                                                 <div>
-                                                <span clas  s="uk-label" style="text-align: center;">XL</span>
+                                                <span class="uk-label" style="text-align: center;">XL</span>
 
                                                 </div>
 
