end design confirmOrder page

--- a/bizopt/BO/templates/confirmOrder.html
+++ b/bizopt/BO/templates/confirmOrder.html
@@ -79,10 +79,10 @@
             <div class="uk-flex-column">
                 <br>
 
-                <div class="uk-flex" style="gap:2%">
+                <div class="uk-flex uk-margin-bottom" style="gap:2%">
                     <div>
                         <!-- <p style="font-weight: 600; font-size: 2.625em;">Корзина</p> -->
-                        <h1 class="">Оформление</h1>
+                        <h1 class="" style="font-weight: 450;">Оформление</h1>
                     </div>
                     <!-- <p class="uk-text-bottom uk-margin-small-left">n товаров</p> -->
                 </div>
@@ -94,17 +94,15 @@
                         <div class="uk-flex-column">
                             <div class="uk-width-1 uk-border-rounded uk-padding" style=" margin: 0; background-color:rgba(211, 211, 211, 0.251); height: auto; border: 1px solid black;">
 <!-- style="gap: 60%;" -->
-                                <div class="uk-flex" style="gap: 60%;">
+                                <div class="uk-flex" style="gap: 3%;">
                                     <div>
-                                    <p class="" style=" font-size: 1.5em; margin:0; padding: 0;">Доставка</p>
-
+                                        <p class="" style="font-weight: 450; font-size: 1.5em; margin:0; padding: 0;">Доставка</p>
                                     </div>
                                     <div>
-                                    <p><a href="" class="uk-button uk-button-text" style="padding-top: 1.5vh;">Изменить</a></p>
-
+                                        <p>
+                                            <a href="" class="uk-button uk-button-text" style="padding-top: 1.2vh;">Изменить</a>
+                                        </p>
                                     </div>
-
-                                  
 
                                 </div>
 
@@ -140,18 +138,53 @@
                             <div class="uk-width-1 uk-flex" style="gap: 3%;">
                                    <div class="uk-width-1-2 uk-border-rounded uk-padding" style="margin: 10px 0; background-color:rgba(211, 211, 211, 0.251); height: auto; border: 1px solid black;">
 
-                                        <p class="uk-margin-left" style=" font-size: 1.5em; margin:0">Получатель <b
-                                                class="">{{shop}}</b>
-                                        </p>
+                                        <!-- <p class="" style=" font-size: 1.5em; margin:0">Получатель</p> -->
+
+                                         <div class="uk-flex" style="gap: 3%;">
+                                            <div>
+                                                <p class="" style="font-weight: 450; font-size: 1.5em; margin:0; padding: 0;">Получатель</p>
+                                            </div>
+                                            <div>
+                                                <p>
+                                                    <a href="" class="uk-button uk-button-text" style="padding-top: 1.2vh;">Изменить</a>
+                                                </p>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="uk-flex uk-margin-top">
+                                            <span uk-icon="user"></span>
+                                            <div>
+                                                <p class="uk-margin-left" style=" font-size: 1.0em; margin:0">Евгений Дегтярев</p>
+                                                <p class="uk-margin-left" style=" font-size: 0.8em; margin:0">DegtyarevEA12@gmail.com</p>
+                                            </div>
+                                        </div>
                                         <!--
                                         <hr style="border: 2px solid #B54F00;"> -->
                                     </div>
 
                                     <div class="uk-width-1-2 uk-border-rounded uk-padding" style="margin: 10px 0; background-color:rgba(211, 211, 211, 0.251); height: auto; border: 1px solid black;">
 
-                                        <p class="uk-margin-left" style=" font-size: 1.5em; margin:0">Способ оплаты <b
-                                                class="">{{shop}}</b>
-                                        </p>
+                                        <!-- <p class="" style=" font-size: 1.5em; margin:0">Способ оплаты</p> -->
+
+                                        <div class="uk-flex" style="gap: 3%;">
+                                            <div>
+                                                <p class="" style="font-weight: 450; font-size: 1.5em; margin:0; padding: 0;">Способ оплаты</p>
+                                            </div>
+                                            <div>
+                                                <p>
+                                                    <a href="" class="uk-button uk-button-text" style="padding-top: 1.2vh;">Изменить</a>
+                                                </p>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="uk-flex uk-margin-top">
+                                            <span uk-icon="tablet"></span>
+                                            <div>
+                                                <p class="uk-margin-left" style=" font-size: 1.0em; margin:0">Картой онлайн</p>
+                                            </div>
+                                        </div>
                                         <!--
                                         <hr style="border: 2px solid #B54F00;"> -->
                                     </div>
