--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -2,7 +2,63 @@
 
 {% block content %}
 
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+
+
 <style>
+
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
+
+
+
+/* @media screen and (min-width: 992px){
+
+    
+    .product-imgs{
+        display: flex;
+
+    }
+
+} */
+
+    .product-imgs{
+        display: flex;
+
+    }
+
+    .img-select{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .img-item{
+        margin: 0.3rem;
+        border: 2px solid #000;
+    }
+
+    .img-item:hover{
+        opacity: 0.8;
+    }
+    .img-display{
+        height: 70vh;
+
+        overflow: hidden;
+        border: 2px solid #000;
+
+    }
+
+    .img-showcase{
+        display: flex;
+        width: 100%;
+        transition: all 0.5s ease;
+
+    }
+    .img-showcase img{
+        min-width: 100%;
+    }
+
+
     .checked {
         color: orange;
     }
@@ -56,38 +112,42 @@
     }
 </style>
 
-<div class="uk-card uk-card-default uk-card-body uk-width-4-5" style="margin: 0  auto">
+<div class="uk-width-4-5" style="margin: 0  auto">
     <container class="container uk-flex uk-flex-around uk-flex-top uk-width-1">
         <div class="uk-width-1-2 uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
-            <ul class="uk-slider-items uk-grid">
-                <li class="uk-width-4-5">
-                    <div class="uk-panel">
-                        <img src="{{product.picture1}}" width="1800" height="1200" alt="">
-                        <div class="uk-position-center uk-text-center">
-                        </div>
-                    </div>
-                </li>
-                <li class="uk-width-4-5">
-                    <div class="uk-panel">
-                        <img src="{{product.picture2}}" width="1800" height="1200" alt="">
-                        <div class="uk-position-center uk-text-center">
-                        </div>
-                    </div>
-                </li>
-                <li class="uk-width-4-5">
-                    <div class="uk-panel">
-                        <img src="{{product.picture3}}" width="1800" height="1200" alt="">
-                        <div class="uk-position-center uk-text-center">
-                        </div>
-                    </div>
-                </li>
-            </ul>
+            <div class = "product-imgs">
 
-            <a class="uk-position-center-left uk-position-small uk-hidden-hover" style="color: black; transition: 0.5s"
-                href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-            <a class="uk-position-center-right uk-position-small uk-hidden-hover" style="color: black; transition: 0.5s"
-                href="#" uk-slidenav-next uk-slider-item="next"></a>
+                <div class = "img-select">
+                    <div class = "img-item">
+                        <a href = "#" data-id = "1">
+                            <img src = "{{product.picture1}}">
+                        </a>
+                    </div>
+                    <div class = "img-item">
+                        <a href = "#" data-id = "2">
+                            <img src = "{{product.picture2}}">
+                        </a>
+                    </div>
+                    <div class = "img-item">
+                        <a href = "#" data-id = "3">
+                            <img src = "{{product.picture3}}">
+                        </a>
+                    </div>
+                
+                </div>
+
+                <div class = "img-display">
+                    <div class = "img-showcase">
+                        <img src = "{{product.picture1}}">
+                        <img src = "{{product.picture2}}">
+                        <img src = "{{product.picture3}}">
+                    </div>
+                </div>
+                
+            </div>
+
+
 
 
         </div>
@@ -231,8 +291,9 @@
 
             <div class="uk-width-2-5">
 
-                <div class="uk-flex uk-flex-center uk-text-center  uk-card uk-card-default"
+                <div class="uk-text-center  uk-card uk-card-default"
                     style="border-radius: 20px; padding: 30px 0;">
+                    
                     <div class="uk-margin-right uk-height-small">
                         <h3>{{product.rating}}</h3>
                         <p>На основании <br>{{product.rate_sum}} отзывов</p>
@@ -252,8 +313,63 @@
                             {% endif %}
                         </div>
                     </div>
+<div>
+  {% if request.user.is_authenticated %}
+                    <button style="color: white; background-color:#0A3644" class="uk-button uk-margin-small-bottom"
+                        type="button" uk-toggle="target: #modal-example">Написать отзыв</button>
+                    {% else %}
+                    <a style="color: white; background-color:#0A3644" class="uk-button uk-margin-small-bottom"
+                        type="button" href="/login">Написать отзыв</a>
+                    {% endif %}
+
+                    <div id="modal-example" uk-modal>
+
+                        <div class="uk-modal-dialog uk-modal-body">
+                            <h2 class="uk-modal-title">Отзыв</h2>
+                            <div class="uk-flex">
+                                <img src="{{user.userImage}}" alt="" class="uk-border-rounded" width="50" height="80"
+                                    alt="">
+                                <div class="uk-flex-column uk-margin-left">
+                                    <p class="uk-margin-remove">{{ user.first_name }}</p>
+                                    <p class="uk-margin-remove">{{ user.email }}</p>
+                                </div>
+                            </div>
+                            <form method="POST" action="">
+                                <div class="uk-margin-top">
+
+                                    <h3>Отзыв:</h3>
+                                    <textarea class="uk-textarea" name="review" id="" rows="10" style="width: 100%;"
+                                        maxlength="1500"></textarea>
+                                    <div class="uk-flex" style="margin-left: 45%">
+                                        <p class="uk-margin-small-top uk-margin-small-right">Оценка: </p>
+                                        <div class="uk-margin-remove-right rating-area">
+                                            <input type="radio" id="star-5" name="rating" value="5">
+                                            <label for="star-5" title="Оценка «5»"></label>
+                                            <input type="radio" id="star-4" name="rating" value="4">
+                                            <label for="star-4" title="Оценка «4»"></label>
+                                            <input type="radio" id="star-3" name="rating" value="3">
+                                            <label for="star-3" title="Оценка «3»"></label>
+                                            <input type="radio" id="star-2" name="rating" value="2">
+                                            <label for="star-2" title="Оценка «2»"></label>
+                                            <input type="radio" id="star-1" name="rating" value="1">
+                                            <label for="star-1" title="Оценка «1»"></label>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% csrf_token %}
+                                <p class="uk-text-right">
+                                    <button class="uk-button uk-button-default uk-modal-close"
+                                        type="button">Закрыть</button>
+                                    <button name="comment_product" class="uk-button uk-button-primary"
+                                        type="submit">Опубликовать</button>
+                                </p>
+                            </form>
+                        </div>
+                    </div>
+</div>
+
                 </div>
-                <div class="uk-width-1 uk-flex uk-flex-middle uk-flex-center uk-margin-small-top">
+                <!-- <div class="uk-width-1 uk-flex uk-flex-middle uk-flex-center uk-margin-small-top">
                     {% if request.user.is_authenticated %}
                     <button style="color: white; background-color:#0A3644" class="uk-button uk-margin-small-bottom"
                         type="button" uk-toggle="target: #modal-example">Написать отзыв</button>
@@ -308,7 +424,7 @@
                     </div>
 
 
-                </div>
+                </div> -->
 
             </div>
             <div class="uk-width-3-5">
@@ -362,7 +478,6 @@
         </div>
     </container>
 </div>
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
@@ -420,6 +535,28 @@
             $('#amount').val(1000)
         }
     });
+</script>
+
+<script>
+    const imgs = document.querySelectorAll('.img-select a');
+    const imgBtns = [...imgs];
+    let imgId = 1;
+
+    imgBtns.forEach((imgItem) => {
+        imgItem.addEventListener('click', (event) => {
+            event.preventDefault();
+            imgId = imgItem.dataset.id;
+            slideImage();
+        });
+    });
+
+    function slideImage(){
+        const displayWidth = document.querySelector('.img-showcase img:first-child').clientWidth;
+
+        document.querySelector('.img-showcase').style.transform = `translateX(${- (imgId - 1) * displayWidth}px)`;
+    }
+
+    window.addEventListener('resize', slideImage);
 </script>
 
 
